--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,15 +21,26 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+      with:
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
-    # Runs a single command using the runners shell
+    # Prints out the commit hash of HEAD
     - name: Print head hash
       run: |
         head_hash=$(git rev-parse "$GITHUB_SHA")
         echo HEAD is "${head_hash}"
 
-    # Runs a set of commands using the runners shell
-    #- name: Run a multi-line script
-    #  run: |
-    #    echo Add other actions to build,
-    #    echo test, and deploy your project.
+    # Runs the count.py script and saves the output (out.html) to the repo
+    - name: Create html file with number of lines
+      run: |
+        python count.py
+        git add .
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git commit -m "Automated out.html creation" -a | exit 0
+
+    - name: Push
+        if: github.ref == 'refs/heads/master'
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{secrets.GITHUB_TOKEN}}
